# Parallelism

./: CMakeLists.txt  Makefile  README.md  res.cpp
